--- a/.github/workflows/storage-information.yml
+++ b/.github/workflows/storage-information.yml
@@ -2,10 +2,10 @@ name: storage-information
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths-ignore: [ README.md ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths-ignore: [ README.md ]
     
 jobs:
@@ -29,7 +29,7 @@ jobs:
   release:
     name: Release
     needs: [build]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
