--- a/.github/workflows/storage-information.yml
+++ b/.github/workflows/storage-information.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        make build-local
+        make build-release
   release:
     name: Release
     needs: [build]
